--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,7 +7,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "prepare": "husky"
   },
   "keywords": [],
   "author": "",
@@ -21,7 +22,10 @@
     "@types/react-router-dom": "^5.3.3",
     "babel-loader": "^9.1.3",
     "css-loader": "^6.10.0",
+    "eslint": "^8",
+    "eslint-config-next": "14.2.3",
     "html-webpack-plugin": "^5.6.0",
+    "husky": "^9.0.11",
     "style-loader": "^3.3.4",
     "typescript": "^5.4.3",
     "webpack": "^5.91.0",
