--- a/frontend/package.json
+++ b/frontend/package.json
@@ -36,12 +36,14 @@
     "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/themes": "^3.0.1",
     "@svgr/webpack": "^8.1.0",
+    "axios": "^1.6.8",
     "classnames": "^2.5.1",
     "effector": "^23.2.0",
     "next": "^14.2.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.2",
+    "react-query": "^3.39.3",
     "react-router-dom": "^6.22.3",
     "swiper": "^11.1.1"
   }
