--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -29,7 +29,8 @@
     "next-env.d.ts",
     ".next/types/**/*.ts",
     "**/*.ts",
-    "**/*.tsx"
+    "**/*.tsx",
+    "custom.d.ts"
   ],
   "exclude": [
     "node_modules"
