--- a/package.json
+++ b/package.json
@@ -12,5 +12,8 @@
   "license": "ISC",
   "devDependencies": {
     "husky": "^9.0.11"
+  },
+  "dependencies": {
+    "typeorm-seeding": "^1.6.1"
   }
 }
