--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,7 +7,9 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "keywords": [],
   "author": "",
@@ -16,6 +18,15 @@
     "@babel/preset-env": "^7.24.3",
     "@babel/preset-react": "^7.24.1",
     "@babel/preset-typescript": "^7.24.1",
+    "@chromatic-com/storybook": "^1.5.0",
+    "@storybook/addon-essentials": "^8.1.9",
+    "@storybook/addon-interactions": "^8.1.9",
+    "@storybook/addon-links": "^8.1.9",
+    "@storybook/addon-onboarding": "^8.1.9",
+    "@storybook/blocks": "^8.1.9",
+    "@storybook/nextjs": "^8.1.9",
+    "@storybook/react": "^8.1.9",
+    "@storybook/test": "^8.1.9",
     "@types/react": "^18.2.73",
     "@types/react-dom": "^18.2.23",
     "@types/react-router-dom": "^5.3.3",
@@ -23,8 +34,10 @@
     "css-loader": "^6.10.0",
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
+    "eslint-plugin-storybook": "^0.8.0",
     "html-webpack-plugin": "^5.6.0",
     "husky": "^9.0.11",
+    "storybook": "^8.1.9",
     "style-loader": "^3.3.4",
     "typescript": "^5.4.3",
     "webpack": "^5.91.0",
@@ -39,6 +52,7 @@
     "axios": "^1.6.8",
     "classnames": "^2.5.1",
     "effector": "^23.2.0",
+    "effector-react": "^23.2.1",
     "next": "^14.2.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
