--- a/frontend/package.json
+++ b/frontend/package.json
@@ -47,6 +47,7 @@
   "dependencies": {
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-checkbox": "^1.0.4",
+    "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/themes": "^3.0.1",
     "@svgr/webpack": "^8.1.0",
     "axios": "^1.6.8",
