--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "husky": "^9.0.11"
   },
   "dependencies": {
-    "@faker-js/faker": "^8.4.1"
+    "@faker-js/faker": "^8.4.1",
+    "@radix-ui/react-icons": "^1.3.0"
   }
 }
