--- a/frontend/package.json
+++ b/frontend/package.json
@@ -32,8 +32,8 @@
     "@testing-library/jest-dom": "^6.4.8",
     "@testing-library/react": "^16.0.0",
     "@types/jest": "^29.5.12",
-    "@types/react": "^18.2.73",
-    "@types/react-dom": "^18.2.23",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
     "@types/react-router-dom": "^5.3.3",
     "babel-loader": "^9.1.3",
     "css-loader": "^6.10.0",
@@ -61,9 +61,9 @@
     "classnames": "^2.5.1",
     "effector": "^23.2.0",
     "effector-react": "^23.2.1",
-    "next": "^14.2.3",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "next": "^15.0.0-canary.118",
+    "react": "^19.0.0-rc-1eaccd82-20240816",
+    "react-dom": "^19.0.0-rc-1eaccd82-20240816",
     "react-hook-form": "^7.51.2",
     "react-loading-skeleton": "^3.4.0",
     "react-query": "^3.39.3",
