--- a/server/package.json
+++ b/server/package.json
@@ -31,6 +31,7 @@
     "cache-manager-redis-store": "^3.0.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "cookie-parser": "^1.4.6",
     "faker": "^6.6.6",
     "passport": "^0.7.0",
     "passport-github": "^1.1.0",
@@ -48,6 +49,7 @@
     "@nestjs/cli": "^10.0.0",
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
+    "@types/cookie-parser": "^1.4.7",
     "@types/express": "^4.17.17",
     "@types/faker": "^6.6.9",
     "@types/jest": "^29.5.2",
